--- a/exercicios/modulo 4/ex04/mq2/estilos/paisagem.css
+++ b/exercicios/modulo 4/ex04/mq2/estilos/paisagem.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /* configurações de css para modo paisagem */
+
+body{
+    background-image: url(../imagens/cev-landscape.jpg);
+    background-position: bottom left;
+}
