--- a/exercicios/modulo 4/ex04/mq2/estilos/retrato.css
+++ b/exercicios/modulo 4/ex04/mq2/estilos/retrato.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /* configurações de css para modo retrato */
+
+body{  
+    background-image: url(../imagens/cev-portrait.jpg);
+    background-position: bottom center;
+}
